--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,15 +5,15 @@
   <div class="Navigation-module-wrapper-VDNDW">
     <div class="Navigation-module-sections-tzP7z">
       <div class="Navigation-module-left-FaRmB">
-                    <span>
-                        <div class="HeaderLogo-module-headerLogo-lWX4m">
-                            <a class="HeaderLogo-module-link-kdP1e" href="/">
-                                <img src="https://viaplay-web-frontend-assets.mtg-api.com/frontend-2023092141850/images/header-logo.png"
-                                     alt="Viaplay Start logo"
-                                     class="Logo-module-logo-pfYdr">
-                            </a>
-                        </div>
-                    </span>
+        <span>
+          <div class="HeaderLogo-module-headerLogo-lWX4m">
+            <a class="HeaderLogo-module-link-kdP1e" href="/">
+              <img src="https://viaplay-web-frontend-assets.mtg-api.com/frontend-2023092141850/images/header-logo.png"
+                   alt="Viaplay Start logo"
+                   class="Logo-module-logo-pfYdr">
+            </a>
+          </div>
+        </span>
       </div>
       <nav class="NavigationItems-module-center-cd-0t">
         <a class="NavigationItem-module-item-vXU--" href="/series">Seriale</a>
@@ -22,7 +22,7 @@
       </nav>
       <div class="Navigation-module-right-643YK">
         <div class="SearchButton-module-container-oHmID">
-          <a class="SearchButton-module-icon-zn1mS" href="/#search="></a>
+          <a class="SearchButton-module-icon-zn1mS" href="/search"></a>
         </div>
         <a class="NavigationItem-module-item-vXU-- NavigationItem-module-library-E3ML5 NavigationItem-module-hide-n07a1"
            href="/library"></a>
